--- a/index.html
+++ b/index.html
@@ -2,84 +2,75 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Water Jug Problem – International Teaching Simulation</title>
+<title>Water Jug Puzzle – Vertical Short</title>
 
 <style>
 body {
     margin: 0;
+    background: #0d1b2a;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
     font-family: "Segoe UI", Arial, sans-serif;
-    background: linear-gradient(135deg, #e3f2fd, #f8fbff);
-    color: #263238;
-    text-align: center;
 }
 
-.wrapper {
-    max-width: 900px;
-    margin: 30px auto;
-    background: #ffffff;
-    border-radius: 18px;
-    padding: 36px;
-    box-shadow: 0 20px 40px rgba(0,0,0,0.12);
+/* ===== 9:16 FRAME ===== */
+.phone {
+    width: 360px;
+    height: 640px;
+    background: linear-gradient(135deg, #e3f2fd, #f8fbff);
+    border-radius: 28px;
+    box-shadow: 0 30px 60px rgba(0,0,0,0.4);
+    padding: 20px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* ===== TITLE ===== */
 h1 {
-    font-size: 46px;
+    margin: 6px 0 4px;
+    font-size: 26px;
     font-weight: 900;
-    margin-bottom: 10px;
-    letter-spacing: 1px;
     background: linear-gradient(135deg, #0d47a1, #42a5f5);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    text-shadow:
-        0 4px 12px rgba(13,71,161,0.35),
-        0 0 18px rgba(66,165,245,0.25);
 }
 
-/* ===== TARGET BADGE ===== */
 .subtitle {
-    display: inline-block;
-    margin: 18px auto 32px;
-    padding: 12px 36px;
-    font-size: 30px;
+    margin-bottom: 10px;
+    padding: 6px 18px;
+    font-size: 20px;
     font-weight: 900;
-    letter-spacing: 1px;
-    color: #ffffff;
+    color: #fff;
     background: linear-gradient(135deg, #ff9800, #f57c00);
-    border-radius: 50px;
-    box-shadow:
-        0 12px 28px rgba(245,124,0,0.55),
-        inset 0 0 12px rgba(255,255,255,0.25);
-    animation: popIn 0.8s ease-out;
-}
-
-@keyframes popIn {
-    0% { transform: scale(0.7); opacity: 0; }
-    80% { transform: scale(1.08); }
-    100% { transform: scale(1); opacity: 1; }
+    border-radius: 20px;
 }
 
 /* ===== JUG AREA ===== */
 .container {
+    flex: 1;
     display: flex;
-    justify-content: center;
     align-items: flex-end;
-    gap: 70px;
-    margin-top: 30px;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0 10px;
 }
 
 /* ===== JUG ===== */
 .jug {
-    width: 120px;
+    width: 80px;
+    background: #fff;
+    border: 4px solid #263238;
+    border-radius: 0 0 18px 18px;
     position: relative;
-    background: #ffffff;
-    border: 5px solid #263238;
-    border-radius: 0 0 24px 24px;
-    box-shadow: 0 12px 24px rgba(0,0,0,0.18);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.2);
 }
 
-.jug-8 { height: 320px; }
-.jug-5 { height: 200px; }
+.jug-8 { height: 260px; }
+.jug-5 { height: 180px; }
 .jug-3 { height: 120px; }
 
 .jug-inner {
@@ -87,81 +78,81 @@ h1 {
     width: 100%;
     height: 100%;
     overflow: hidden;
-    border-radius: 0 0 18px 18px;
+    border-radius: 0 0 14px 14px;
 }
 
 /* ===== WATER ===== */
 .water {
     position: absolute;
     bottom: 0;
-    left: 0;
     width: 100%;
     background: linear-gradient(to top, #0288d1, #4fc3f7);
-    transition: height 1.2s ease, background 0.8s;
-    border-radius: 0 0 14px 14px;
+    transition: height 0.8s ease, background 0.4s;
 }
 
-/* ===== SUCCESS WATER ONLY ===== */
 .success-water {
     background: linear-gradient(to top, #2e7d32, #66bb6a);
 }
 
-/* ===== VOLUME TEXT ===== */
+/* ===== VOLUME ===== */
 .volume {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 26px;
-    font-weight: 800;
+    font-size: 18px;
+    font-weight: 900;
     color: #0d47a1;
-    text-shadow: 0 2px 6px rgba(255,255,255,0.9);
-    pointer-events: none;
 }
 
 /* ===== LABEL ===== */
 .label {
-    margin-top: 14px;
+    margin-top: 6px;
+    font-size: 14px;
     font-weight: 700;
-    font-size: 20px;
     color: #0d47a1;
+    text-align: center;
 }
 
-/* ===== INFO BOX ===== */
+/* ===== INFO (ĐỔI BACKGROUND) ===== */
 .info {
-    margin: 30px auto 0;
-    max-width: 600px;
-    padding: 24px;
-    background: linear-gradient(135deg, #e3f2fd, #f5faff);
-    border: 2px solid #2196f3;
+    margin-top: 10px;
+    padding: 14px;
+    width: 100%;
     border-radius: 14px;
-    font-size: 22px;
-    font-weight: 700;
-    color: #0d47a1;
+    font-size: 16px;
+    font-weight: 900;
+    text-align: center;
+    color: #ff9800;
+    background: linear-gradient(135deg, #e1f5fe, #b3e5fc);
+    border: 2px solid #4fc3f7;
+    transition: background 0.4s, color 0.4s;
+}
+
+/* INFO KHI THÀNH CÔNG */
+.info.success {
+    background: linear-gradient(135deg, #c8e6c9, #a5d6a7);
+    color: #1b5e20;
+    border-color: #2e7d32;
 }
 
 /* ===== BUTTON ===== */
 button {
-    margin-top: 30px;
-    padding: 16px 44px;
-    font-size: 20px;
-    font-weight: bold;
+    margin-top: 10px;
+    padding: 10px 30px;
+    font-size: 16px;
+    font-weight: 900;
     border: none;
-    border-radius: 40px;
+    border-radius: 30px;
     background: linear-gradient(135deg, #42a5f5, #1565c0);
-    color: #ffffff;
-    cursor: pointer;
-    box-shadow: 0 10px 25px rgba(21,101,192,0.45);
-}
-button:hover {
-    transform: translateY(-3px);
+    color: #fff;
 }
 </style>
 </head>
 
 <body>
 
-<div class="wrapper">
+<div class="phone">
     <h1>💧 Water Jug Puzzle</h1>
     <div class="subtitle">Target 4L</div>
 
@@ -173,7 +164,7 @@ button:hover {
                     <div class="volume" id="v8"></div>
                 </div>
             </div>
-            <div class="label">Jug 8L</div>
+            <div class="label">8L</div>
         </div>
 
         <div>
@@ -183,7 +174,7 @@ button:hover {
                     <div class="volume" id="v5"></div>
                 </div>
             </div>
-            <div class="label">Jug 5L</div>
+            <div class="label">5L</div>
         </div>
 
         <div>
@@ -193,7 +184,7 @@ button:hover {
                     <div class="volume" id="v3"></div>
                 </div>
             </div>
-            <div class="label">Jug 3L</div>
+            <div class="label">3L</div>
         </div>
     </div>
 
@@ -203,13 +194,13 @@ button:hover {
 
 <script>
 const steps = [
-    { a:8, b:0, c:0, text:"The 8-liter jug is full." },
-    { a:3, b:5, c:0, text:"Step 1: Pour water from the 8L jug into the 5L jug." },
-    { a:3, b:2, c:3, text:"Step 2: Pour water from the 5L jug into the 3L jug." },
-    { a:6, b:2, c:0, text:"Step 3: Pour water from the 3L jug into the 8L jug." },
-    { a:6, b:0, c:2, text:"Step 4: Pour water from the 5L jug into the 3L jug." },
-    { a:1, b:5, c:2, text:"Step 5: Pour water from the 8L jug into the 5L jug." },
-    { a:1, b:4, c:3, text:"Step 6: Pour water from the 5L jug into the 3L jug." }
+    { a:8, b:0, c:0, text:"8L jug is full" },
+    { a:3, b:5, c:0, text:"8L → 5L" },
+    { a:3, b:2, c:3, text:"5L → 3L" },
+    { a:6, b:2, c:0, text:"3L → 8L" },
+    { a:6, b:0, c:2, text:"5L → 3L" },
+    { a:1, b:5, c:2, text:"8L → 5L" },
+    { a:1, b:4, c:3, text:"🎯 Got exactly 4L!" }
 ];
 
 let i = 0;
@@ -218,12 +209,13 @@ function setWater(id, value, max) {
     document.getElementById(id).style.height = (value / max * 100) + "%";
 }
 
-function clearSuccess() {
+function resetSuccess() {
     water5.classList.remove("success-water");
+    info.classList.remove("success");
 }
 
-function showStep(step, isLast=false) {
-    clearSuccess();
+function showStep(step) {
+    resetSuccess();
 
     setWater("water8", step.a, 8);
     setWater("water5", step.b, 5);
@@ -233,13 +225,12 @@ function showStep(step, isLast=false) {
     v5.innerText = step.b + "L";
     v3.innerText = step.c + "L";
 
-    info.innerHTML = `<b>${step.text}</b><br>
-    State: (8L=${step.a}, 5L=${step.b}, 3L=${step.c})`;
+    info.innerText = step.text;
 
-    if (isLast) {
-        setTimeout(() => {
-            water5.classList.add("success-water");
-        }, 800);
+    /* ĐỔI MÀU NGAY KHI 5L = 4L */
+    if (step.b === 4) {
+        water5.classList.add("success-water");
+        info.classList.add("success");
     }
 }
 
@@ -247,15 +238,14 @@ function start() {
     i = 0;
     showStep(steps[0]);
 
-    const timer = setInterval(() => {
+    const t = setInterval(() => {
         i++;
         if (i >= steps.length) {
-            clearInterval(timer);
-            showStep(steps[steps.length - 1], true);
+            clearInterval(t);
             return;
         }
         showStep(steps[i]);
-    }, 2600);
+    }, 2200);
 }
 
 showStep(steps[0]);
