--- a/index.html
+++ b/index.html
@@ -107,12 +107,28 @@ h1 {
 
 /* ===== LABEL ===== */
 .label {
-    margin-top: 6px;
-    font-size: 14px;
-    font-weight: 700;
-    color: #0d47a1;
+    margin-top: 10px;
+
+    font-size: 20px;        /* TO RÕ HƠN */
+    font-weight: 900;
+    letter-spacing: 0.8px;
+
+    color: #ffffff;
     text-align: center;
+
+    background: linear-gradient(135deg, #ff9800, #f57c00);
+    padding: 8px 0;
+    border-radius: 14px;
+
+    border: 3px solid #ffcc80;
+
+    box-shadow:
+        0 6px 16px rgba(245,124,0,0.6);
+
+    text-shadow:
+        0 2px 6px rgba(0,0,0,0.6);
 }
+
 
 /* ===== INFO – RÕ & NỔI HƠN ===== */
 .info {
